plugins {
    id("maven-publish")
    id("java-library")
}

group = "net.auoeke"
version = "4.1.0"

sourceCompatibility = 17
targetCompatibility = 17

sourceSets {
    main {
        java.srcDir("src")
    }

    test {
        java.srcDir("test")
    }
}

java {
    withSourcesJar()
}

compileTestJava {
    options.compilerArgs.add("--enable-preview")
}

repositories {
    mavenCentral()

    maven {url = "https://maven.auoeke.net"}
}

dependencies {
    api("net.gudenau.lib:unsafe:latest.release")

    testCompileOnly(compileOnlyApi("org.jetbrains:annotations:latest.release"))

    testImplementation("org.junit.jupiter:junit-jupiter-api:latest.release")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")

    testImplementation("org.ow2.asm:asm:9.0")
    testImplementation("org.ow2.asm:asm-tree:9.0")
    testImplementation("org.openjdk.jol:jol-core:latest.release")
    testImplementation("user11681:uncheck:latest.release")
    testImplementation("net.bytebuddy:byte-buddy-agent:latest.release")
}

test {
    useJUnitPlatform()
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }

    repositories {
        mavenLocal()

        maven {
            url = "https://maven.auoeke.net"

            credentials {
                username = System.properties["maven.username"]
                password = System.properties["maven.password"]
            }
        }
    }
}
